# afdp

./: AFDP-industry-disruption-warning.md  AFDP_TECHNICAL_DEMO.md  BUSINESS-USAGE.md  DEVOPS-INTEGRATION.md  PUBLIC-SAFETY-USAGE.md  README.md  WORKFLOW-CUSTOMIZATION.md  tech-stack-draft.md
services/notary-service/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DISCLAIMER.md  Dockerfile  LICENSE  SECURITY.md  build.rs  deny.toml  docker-compose.yml  readme.md
services/notary-service/.github/workflows/: ci.yml  release.yml
services/notary-service/afdp-notary-testing/: docker-compose.yml
services/notary-service/afdp-notary-testing/docs/test-results/: ENTERPRISE_DEPLOYMENT_GUIDE.md  EXECUTIVE_SUMMARY.md  README.md  SECURITY_COMPLIANCE_REPORT.md  TECHNICAL_PERFORMANCE_REPORT.md
services/notary-service/afdp-notary-testing/sample-data/: test-scenarios.json
services/notary-service/afdp-notary-testing/sample-data/ai-model-deployment/: gpt-4-finetune-evidence.json  vision-transformer-evidence.json
services/notary-service/afdp-notary-testing/sample-data/financial-algorithm/: credit-risk-model.json  high-frequency-trading-deployment.json
services/notary-service/afdp-notary-testing/sample-data/healthcare-ai/: diagnostic-ai-deployment.json  drug-discovery-evidence.json
services/notary-service/afdp-notary-testing/sample-data/security-scan/: critical-vulnerability-scan.json  infrastructure-compliance-scan.json
services/notary-service/afdp-notary-testing/sample-data/supply-chain/: pharmaceutical-cold-chain.json  semiconductor-provenance.json
services/notary-service/afdp-notary-testing/test-scripts/grpc/: README.md  generate_proto.sh  grpc_performance_tester.py  requirements.txt  simple_grpc_client.rs
services/notary-service/afdp-notary-testing/test-scripts/pulsar-consumer/: pulsar_event_publisher.py
services/notary-service/afdp-notary-testing/test-scripts/rest-api/: README.md  requirements.txt  simple-rest-tests.sh  test-all-scenarios.py
services/notary-service/docs/: grpc-api.md  pulsar-implementation-status.md  pulsar-integration.md  rest-api.md
services/notary-service/examples/: basic_notarization.rs  temporal_workflows.rs
services/notary-service/examples/grpc-client/: approval-workflow.rs  health-check.rs  simple-signing.rs
services/notary-service/examples/pulsar/: monitor-results.py  send-model-deployment-event.py
services/notary-service/examples/rest-api/: README.md  approval-workflow.sh  batch-signing.sh  model-deployment.sh
services/notary-service/monitoring/: prometheus.yml
services/notary-service/proto/: notary.proto
services/notary-service/src/: afdp.notary.v1.rs  config.rs  error.rs  evidence.rs  lib.rs  notary.rs  rekor.rs  vault.rs
services/notary-service/src/afdp/: evidence.rs  mod.rs  workflows.rs  workflows_complex.rs
services/notary-service/src/grpc/: conversions.rs  mod.rs  server.rs
services/notary-service/src/pulsar/: config.rs  consumer.rs  handlers.rs  messages.rs  mod.rs  producer.rs
services/notary-service/src/rest/: handlers.rs  mod.rs  models.rs  server.rs
services/notary-service/src/temporal/: activities.rs  client.rs  client_complex.rs  mock.rs  mod.rs  workflows.rs  workflows_complex.rs
services/notary-service/tests/: integration_test.rs  rest_api_integration.rs
services/policy-engine/: POLICY-ENGINE-EXAMPLES.md  README.md  docker-compose.yml  example-config-working.yaml  example-config.yaml  example-server.go  go.mod  go.sum  simple_test.go
services/policy-engine/cmd/framework/: main.go
services/policy-engine/cmd/server/: main.go
services/policy-engine/docs/: framework-architecture.md  framework-configuration-reference.md  framework-extension-guide.md  policy-language-reference.md  security-architecture.md
services/policy-engine/internal/core/: config_manager.go  config_manager_test.go  decision_cache.go  decision_engine.go  decision_engine_test.go  event_bus.go  event_bus_test.go  framework.go  pipeline_manager.go  plugin_registry.go
services/policy-engine/internal/logging/: logger.go  logger_test.go
services/policy-engine/internal/metrics/: collector.go  collector_test.go
services/policy-engine/internal/plugins/: builtin_postgres.go  builtin_postgres_test.go  builtin_rego.go  builtin_rego_test.go  builtin_security.go  builtin_workflow.go  builtin_workflow_test.go  grpc_wrappers.go  loader_grpc.go  loader_http.go  loader_local.go  loader_oci.go  manager.go  manager_test.go  sandbox.go
services/policy-engine/policies/: ai-deployment.rego
services/policy-engine/test/: e2e_workflow_test.go  error_handling_test.go  performance_test.go
services/repository-analysis/: Cargo.toml  Dockerfile.test  README.md  config.example.yaml  docker-compose.test.yml
services/repository-analysis/docs/: TESTING.md  api-reference.md  architecture.md  forensic-procedures.md
services/repository-analysis/examples/: distributed_intelligence.rs
services/repository-analysis/scripts/: run-tests.sh
services/repository-analysis/src/: config.rs  error.rs  lib.rs  main.rs  server.rs
services/repository-analysis/src/analysis/: code_analyzer.rs  file_analyzer.rs  git_analyzer.rs  ml_analyzer.rs  mod.rs  security_scanner.rs
services/repository-analysis/src/api/: mod.rs  rest.rs
services/repository-analysis/src/auth/: mod.rs
services/repository-analysis/src/events/: distribution.rs  mod.rs  publisher.rs  schemas.rs
services/repository-analysis/src/forensics/: mod.rs
services/repository-analysis/src/proto/: mod.rs
services/repository-analysis/src/storage/: mod.rs  object.rs  postgres.rs  vector.rs
services/repository-analysis/src/temporal/: mod.rs
services/repository-analysis/src/tests/: code_analyzer_tests.rs  file_analyzer_tests.rs  git_analyzer_tests.rs  integration_tests.rs  ml_analyzer_tests.rs  mod.rs  security_scanner_tests.rs
services/repository-analysis/tests/: test_runner.rs
services/repository-analysis/tests/integration/: analysis_tests.rs  api_tests.rs  event_tests.rs  forensics_tests.rs  mod.rs  storage_tests.rs
(+17 files in other folders)
